--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              primary: '#6D28D9', 
-              secondary: '#A855F7',
-              accent: '#FAE8FF',
-              dark: '#4C1D95',
-            }
-          }
+  tailwind.config = {
+    theme: {
+      extend: {
+        colors: {
+          forest: '#1F3D2B',
+          darkgreen: '#2F5D50',
+          sage: '#7FB8A6',
+          mint: '#CFEDE3',
+          cream: '#F7F5EF',
+          textdark: '#1F2937',
         }
       }
-    </script>
+    }
+  }
+</script>
+
   </head>
   <body>
     <div id="root"></div>
